[tool.poetry]
name = "algorithms"
version = "1.0.0"
description = ""
authors = ["electrolyteJ <hawks.jamesf@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "basic" , from ="src"},{ include = "common" , from ="src"},{ include = "training" , from ="src"}]
[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
